# ChainSight-mcp

./: .gitignore  README.md  pyproject.toml  skills-lock.json
docs/: architecture.md  demo_script.md
scripts/: deploy_wallet.sh
src/: agentic_wallet.py  insight_engine.py  mcp_server.py  onchain_data.py  uniswap_client.py
tests/: test_mcp_tools.py
ui/: app.py
