[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "chainsight-mcp"
version     = "1.0.0"
description = "ChainSight: Reusable MCP-compliant on-chain data analyst skill for X Layer + Uniswap V3"
readme      = "README.md"
requires-python = ">=3.10"
license     = {text = "MIT"}
authors     = [{name = "ChainSight Team"}]
keywords    = ["mcp", "uniswap", "xlayer", "defi", "onchain", "ai-agent"]

dependencies = [
    # MCP official SDK
    "mcp>=1.0.0",
    # HTTP client for subgraph / RPC queries
    "aiohttp>=3.9.0",
    # Streamlit UI
    "streamlit>=1.35.0",
    # Web3 (optional – used in agentic wallet; fallback to mock if absent)
    "web3>=6.0.0",
    # eth_account for EIP-191 signing
    "eth-account>=0.10.0",
    # Environment variable management
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
chainsight-server = "src.mcp_server:run_server"
chainsight-ui     = "ui.app:main"

[tool.setuptools.packages.find]
where = ["."]

# ─────────────────────────────────────────────
# MCP Manifest (standard skill declaration)
# ─────────────────────────────────────────────
[tool.mcp]
name        = "chainsight-mcp"
version     = "1.0.0"
description = "On-chain data analyst skill for X Layer + Uniswap V3"
author      = "ChainSight Team"

[[tool.mcp.tools]]
name        = "get_pool_health"
description = "Analyse health of a Uniswap V3 pool on X Layer. Returns APY, TVL, volatility score, and risk level."

[[tool.mcp.tools]]
name        = "analyze_swap_impact"
description = "Predict swap outcome on X Layer. Returns expected output, slippage %, route, and gas cost."

[[tool.mcp.tools]]
name        = "get_beginner_recommendation"
description = "Get the best pool for a beginner based on their risk tolerance (LOW/MEDIUM/HIGH)."

# ─────────────────────────────────────────────
# pytest config
# ─────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts      = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit   = ["tests/*", "ui/*"]